fix: error checking and bug fix where some items are not copied

--- a/src/locales/en-US.json
+++ b/src/locales/en-US.json
@@ -19,6 +19,8 @@
       }
     },
     "hints": {
+      "clipboard_process_failed": "Failed to process clipboard content.",
+      "clipboard_read_failed": "Failed to read clipboard. It may be in use by another application.",
       "delete_modal_content": "Are you sure you want to delete this?",
       "search_placeholder": "Search..."
     },
